# PrimalFormulas-V2

./: .coverage  .gitignore  Dockerfile  Pipfile  main.py  pytest.ini  railway.json  railway.toml  railway.yaml  readme.md  requirements.txt
server/: .gitignore  Makefile  cdk.json  curl.sh  db.sqlite3  main.py  makefile  manage.py  package-lock.json  package.json  pyproject.toml  pyrightconfig.json  pytest.ini  requirements.txt  run_dev.sh  tips.md  tips.txt
server/about/: models.py  serializers.py  tests.py  urls.py  views.py
server/about/migrations/: 0001_initial.py  0002_alter_about_options.py  0003_alter_about_created_alter_about_id.py  (+1 more)
server/api/: Makefile  go.mod  go.sum  temp.go
server/api/lib/: api.go  (+4 more)
server/assets/: models.py  serializers.py  tests.py  urls.py  views.py
server/database/: about.py  about_database.py  assets.py  assets_database.py  content.py  products.py  products_database.py
server/lib/: firebase.py  server-stack.ts
server/models/: about_models.py  asset_models.py  data_models.py  models.py  products.py  products_models.py
server/payments/: serializers.py  urls.py  views.py
server/primalformulas/: asgi.py  images.py  mixins.py  permissions.py  serializers.py  settings.py  urls.py  utils.py  views.py  wsgi.py
server/products/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
server/routes/: about.py  about_routes.py  assets.py  assets_routes.py  auth_routes.py  payments_routes.py  product_routes.py  products.py
server/sql/: tables.sql
server/utils/: auth.py  aws.py  config.py  database.py  stripe.py
(+299 files in other folders)
